--- a/languages/better-click-to-tweet.pot
+++ b/languages/better-click-to-tweet.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Better Click To Tweet 4.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/better-click-to-"
 "tweet\n"
-"POT-Creation-Date: 2015-03-25 20:44:59+00:00\n"
+"POT-Creation-Date: 2015-03-27 20:56:20+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -17,8 +17,10 @@ msgstr ""
 msgid "You do not have sufficient permissions to access this page."
 msgstr ""
 
+#. translators: Treat "Better Click To Tweet" as a brand name, don't translate
+#. it
 #: bctt_options.php:45
-msgid "Better Click To Tweet — a Plugin by Ben Meredith"
+msgid "Better Click To Tweet — a plugin by Ben Meredith"
 msgstr ""
 
 #: bctt_options.php:53
@@ -37,6 +39,7 @@ msgid "Sign up to receive my FREE web strategy guide"
 msgstr ""
 
 #: bctt_options.php:59
+msgctxt "placeholder text for input field"
 msgid "Your Email Address"
 msgstr ""
 
@@ -103,7 +106,7 @@ msgid ""
 "of your twitter name, to leave room for it and a link back to the post."
 msgstr ""
 
-#: bctt_options.php:96 better-click-to-tweet.php:209
+#: bctt_options.php:96
 msgid "Settings"
 msgstr ""
 
@@ -122,10 +125,12 @@ msgid ""
 msgstr ""
 
 #: bctt_options.php:104
+msgctxt "label for text input on settings screen"
 msgid "Your Twitter Handle"
 msgstr ""
 
 #: bctt_options.php:107
+msgctxt "label for checkbox on settings screen"
 msgid "Use Short URL?"
 msgstr ""
 
@@ -138,7 +143,13 @@ msgid "An open source plugin by <a href=%s>Ben Meredith</a>"
 msgstr ""
 
 #: better-click-to-tweet.php:138
+msgctxt "Text for the box on the reader-facing box"
 msgid "Click To Tweet"
+msgstr ""
+
+#: better-click-to-tweet.php:209
+msgctxt "text for the link on the plugins page"
+msgid "Settings"
 msgstr ""
 
 #. Plugin Name of the plugin/theme
