--- a/languages/better-click-to-tweet.pot
+++ b/languages/better-click-to-tweet.pot
@@ -1,24 +1,56 @@
-# Copyright (C) 2015 Better Click To Tweet
-# This file is distributed under the same license as the Better Click To Tweet package.
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Better Click To Tweet 4.0\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/better-click-to-"
-"tweet\n"
-"POT-Creation-Date: 2015-03-27 20:56:20+00:00\n"
+"Project-Id-Version: Better Click To Tweet\n"
+"POT-Creation-Date: 2015-07-13 14:15-0400\n"
+"PO-Revision-Date: 2015-07-13 12:09-0400\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"X-Generator: Poedit 1.8.2\n"
+"X-Poedit-Basepath: ..\n"
+"X-Poedit-WPHeader: better-click-to-tweet.php\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
+"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
+"_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"X-Poedit-SearchPath-0: .\n"
+"X-Poedit-SearchPathExcluded-0: *.js\n"
+
+#: assets/tinymce/languages/bctt-mce-locale.php:12
+msgctxt "Text that shows on mouseover for visual editor button"
+msgid "Better Click To Tweet Shortcode Generator"
+msgstr ""
+
+#: assets/tinymce/languages/bctt-mce-locale.php:13
+msgctxt ""
+"Text for title of the popup box when creating tweetable quote in the visual "
+"editor"
+msgid "Better Click To Tweet Shortcode Generator"
+msgstr ""
+
+#: assets/tinymce/languages/bctt-mce-locale.php:14
+msgctxt "Text for label on input box on popup box in visual editor"
+msgid "Tweetable Quote"
+msgstr ""
+
+#: assets/tinymce/languages/bctt-mce-locale.php:15
+msgctxt "Text explaining the checkbox on the visual editor"
+msgid "Add via @YourTwitterName to this tweet"
+msgstr ""
+
+#: assets/tinymce/languages/bctt-mce-locale.php:16
+msgctxt "Checkbox label in visual editor"
+msgid "Include via?"
+msgstr ""
 
 #: bctt_options.php:40
 msgid "You do not have sufficient permissions to access this page."
 msgstr ""
 
-#. translators: Treat "Better Click To Tweet" as a brand name, don't translate
-#. it
+#. translators: Treat "Better Click To Tweet" as a brand name, don't translate it
 #: bctt_options.php:45
 msgid "Better Click To Tweet — a plugin by Ben Meredith"
 msgstr ""
@@ -28,6 +60,7 @@ msgid "About the Author"
 msgstr ""
 
 #: bctt_options.php:57
+#, php-format
 msgid ""
 "This plugin is developed by <a href=\"%s\">Ben Meredith</a>. I am a "
 "freelance developer specializing in <a href=\"%s\">outrunning and "
@@ -48,18 +81,21 @@ msgid "No Spam. One-click unsubscribe in every message"
 msgstr ""
 
 #: bctt_options.php:74
+#, php-format
 msgid ""
 "Are you a developer? I would love your help making this plugin better. Check "
 "out the <a href=%s>plugin on Github.</a>"
 msgstr ""
 
 #: bctt_options.php:75
+#, php-format
 msgid ""
 "The best way you can support this and other plugins is to <a href=%s>donate</"
 "a>"
 msgstr ""
 
 #: bctt_options.php:75
+#, php-format
 msgid "The second best way is to <a href=%s>leave an honest review.</a>"
 msgstr ""
 
@@ -75,8 +111,7 @@ msgstr ""
 msgid "Instructions"
 msgstr ""
 
-#. translators: Treat "Better Click To Tweet" as a brand name, don't translate
-#. it
+#. translators: Treat "Better Click To Tweet" as a brand name, don't translate it
 #: bctt_options.php:88
 msgid ""
 "To add styled click-to-tweet quote boxes include the Better Click To Tweet "
@@ -87,8 +122,7 @@ msgstr ""
 msgid "Here's how you format the shortcode:"
 msgstr ""
 
-#. translators: This text shows up as a sample tweet in the instructions for
-#. how to use the plugin.
+#. translators: This text shows up as a sample tweet in the instructions for how to use the plugin.
 #: bctt_options.php:89
 msgid "Meaningful, tweetable quote."
 msgstr ""
@@ -139,15 +173,16 @@ msgid "Save Changes"
 msgstr ""
 
 #: bctt_options.php:114
+#, php-format
 msgid "An open source plugin by <a href=%s>Ben Meredith</a>"
 msgstr ""
 
-#: better-click-to-tweet.php:138
+#: better-click-to-tweet.php:142
 msgctxt "Text for the box on the reader-facing box"
 msgid "Click To Tweet"
 msgstr ""
 
-#: better-click-to-tweet.php:209
+#: better-click-to-tweet.php:231
 msgctxt "text for the link on the plugins page"
 msgid "Settings"
 msgstr ""
@@ -155,6 +190,7 @@ msgstr ""
 #. Plugin Name of the plugin/theme
 msgid "Better Click To Tweet"
 msgstr ""
+
 
 #. Description of the plugin/theme
 msgid ""
@@ -164,4 +200,3 @@ msgid ""
 "characters. Simply put, as Click To Tweet plugins go, this one is, well, "
 "BETTER."
 msgstr ""
-
