--- a/languages/better-click-to-tweet-es_ES.po
+++ b/languages/better-click-to-tweet-es_ES.po
@@ -1,19 +1,54 @@
-# Copyright (C) 2015 Better Click To Tweet
-# This file is distributed under the same license as the Better Click To Tweet package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Better Click To Tweet 4.0\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/better-click-to-tweet\n"
-"POT-Creation-Date: 2015-03-27 20:56:20+00:00\n"
+"Project-Id-Version: Better Click To Tweet\n"
+"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/better-click-to-"
+"tweet\n"
+"POT-Creation-Date: 2015-07-13 14:15-0400\n"
+"PO-Revision-Date: Tue Jul 14 2015 11:40:50 GMT-0400 (EDT)\n"
+"Last-Translator: admin <ben@benandjacq.com>\n"
+"Language-Team: \n"
+"Language: Spanish (Spain)\n"
+"Plural-Forms: nplurals=2; plural=n != 1\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-03-27 18:02-0500\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Language: es_ES\n"
-"X-Generator: Poedit 1.7.5\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Generator: Loco - https://localise.biz/\n"
+"X-Poedit-Basepath: .\n"
+"X-Poedit-SearchPath-0: ..\n"
+"X-Poedit-KeywordsList: _:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;"
+"__:1;_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;"
+"_x:1,2c;_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;"
+"esc_attr__:1;esc_html__:1;esc_attr_e:1;esc_html_e:1;esc_attr_x:1,2c;"
+"esc_html_x:1,2c;comments_number_link:2,3;t:1;st:1;trans:1;transChoice:1,2\n"
+"X-Loco-Target-Locale: es_ES"
+
+#: assets/tinymce/languages/bctt-mce-locale.php:12
+msgctxt "Text that shows on mouseover for visual editor button"
+msgid "Better Click To Tweet Shortcode Generator"
+msgstr "Generador del Shortcode Better Click To Tweet"
+
+#: assets/tinymce/languages/bctt-mce-locale.php:13
+msgctxt ""
+"Text for title of the popup box when creating tweetable quote in the visual "
+"editor"
+msgid "Better Click To Tweet Shortcode Generator"
+msgstr "Generador del Shortcode Better Click To Tweet"
+
+#: assets/tinymce/languages/bctt-mce-locale.php:14
+msgctxt "Text for label on input box on popup box in visual editor"
+msgid "Tweetable Quote"
+msgstr "Algo significativo para Twittear"
+
+#: assets/tinymce/languages/bctt-mce-locale.php:15
+msgctxt "Text explaining the checkbox on the visual editor"
+msgid "Add via @YourTwitterName to this tweet"
+msgstr "Agrega \"via @NombreIdentificador\" en este tweet."
+
+#: assets/tinymce/languages/bctt-mce-locale.php:16
+msgctxt "Checkbox label in visual editor"
+msgid "Include via?"
+msgstr "¿Incluye \"via @NombreIdentificador\"?"
 
 #: bctt_options.php:40
 msgid "You do not have sufficient permissions to access this page."
@@ -30,13 +65,15 @@ msgid "About the Author"
 msgstr "Sobre el autor"
 
 #: bctt_options.php:57
+#, php-format
 msgid ""
 "This plugin is developed by <a href=\"%s\">Ben Meredith</a>. I am a freelance "
-"developer specializing in <a href=\"%s\">outrunning and outsmarting hackers</a>."
+"developer specializing in <a href=\"%s\">outrunning and outsmarting "
+"hackers</a>."
 msgstr ""
 "Este plugin es desarrollado por <a href=\"%s\">Ben Meredith</a>. Soy un "
-"desarrollador freelance especializada en <a href=\"%s\">vencer y engañando a los "
-"hackers</a>."
+"desarrollador freelance especializada en <a href=\"%s\">vencer y engañando a "
+"los hackers</a>."
 
 #: bctt_options.php:58
 msgid "Sign up to receive my FREE web strategy guide"
@@ -52,20 +89,25 @@ msgid "No Spam. One-click unsubscribe in every message"
 msgstr "No Spam. Darse de baja de un clic en cada mensaje"
 
 #: bctt_options.php:74
+#, php-format
 msgid ""
-"Are you a developer? I would love your help making this plugin better. Check out the "
-"<a href=%s>plugin on Github.</a>"
+"Are you a developer? I would love your help making this plugin better. Check "
+"out the <a href=%s>plugin on Github.</a>"
 msgstr ""
-"﻿¿Eres desarrollador? Me encantaría su ayuda para hacer mejor este plugin. Echa un "
-"vistazo al <a href=%s>plugin en Github.</a>"
+"﻿¿Eres desarrollador? Me encantaría su ayuda para hacer mejor este plugin. "
+"Echa un vistazo al <a href=%s>plugin en Github.</a>"
 
 #: bctt_options.php:75
-msgid "The best way you can support this and other plugins is to <a href=%s>donate</a>"
+#, php-format
+msgid ""
+"The best way you can support this and other plugins is to <a "
+"href=%s>donate</a>"
 msgstr ""
-"La mejor manera en que usted puede apoyar este y otros plugins es <a href=%s>donar</"
-"a>"
+"La mejor manera en que usted puede apoyar este y otros plugins es <a "
+"href=%s>donar</a>"
 
 #: bctt_options.php:75
+#, php-format
 msgid "The second best way is to <a href=%s>leave an honest review.</a>"
 msgstr "﻿La segunda mejor manera es <a href=%s>dejar una revisión honesta.</a>"
 
@@ -85,11 +127,11 @@ msgstr "﻿Instrucciones"
 #. it
 #: bctt_options.php:88
 msgid ""
-"To add styled click-to-tweet quote boxes include the Better Click To Tweet shortcode "
-"in your post."
+"To add styled click-to-tweet quote boxes include the Better Click To Tweet "
+"shortcode in your post."
 msgstr ""
-"Para añadir casillas de texto de estilo \"click to tweet\" incluya el shortcode "
-"\"Better Click To Tweet\" en su mensaje."
+"Para añadir casillas de texto de estilo \"click to tweet\" incluya el "
+"shortcode \"Better Click To Tweet\" en su mensaje."
 
 #: bctt_options.php:89
 msgid "Here's how you format the shortcode:"
@@ -104,19 +146,21 @@ msgstr "Algo significativo para Twittear."
 #. translators: Also, treat "BCTT" as a brand name, don't translate it
 #: bctt_options.php:90
 msgid ""
-"If you are using the visual editor, click the BCTT birdie in the toolbar to add a "
-"pre-formatted shortcode to your post."
+"If you are using the visual editor, click the BCTT birdie in the toolbar to "
+"add a pre-formatted shortcode to your post."
 msgstr ""
-"Si está utilizando el editor visual, haga clic en el pajarito BCTT en la barra de "
-"herramientas para añadir un shortcode formateado previamente a su mensaje."
+"Si está utilizando el editor visual, haga clic en el pajarito BCTT en la "
+"barra de herramientas para añadir un shortcode formateado previamente a su "
+"mensaje."
 
 #: bctt_options.php:91
 msgid ""
-"Tweet length is automatically shortened to 117 characters minus the length of your "
-"twitter name, to leave room for it and a link back to the post."
+"Tweet length is automatically shortened to 117 characters minus the length "
+"of your twitter name, to leave room for it and a link back to the post."
 msgstr ""
-"La longitud del tweet se acortará automáticamente a 117 caracteres menos la longitud "
-"de su nombre de Twitter, para dejar espacio para ella y un enlace de vuelta al tweet."
+"La longitud del tweet se acortará automáticamente a 117 caracteres menos la "
+"longitud de su nombre de Twitter, para dejar espacio para ella y un enlace "
+"de vuelta al tweet."
 
 #: bctt_options.php:96
 msgid "Settings"
@@ -124,23 +168,23 @@ msgstr "Ajustes"
 
 #: bctt_options.php:97
 msgid ""
-"Enter your Twitter handle to add \"via @yourhandle\" to your tweets. Do not include "
-"the @ symbol."
+"Enter your Twitter handle to add \"via @yourhandle\" to your tweets. Do not "
+"include the @ symbol."
 msgstr ""
-"Ingrese su nombre identificador de Twitter para agregar \"via @nombreIdentificador\" "
-"a sus tweets. No incluya el símbolo @."
+"Ingrese su nombre identificador de Twitter para agregar \"via "
+"@nombreIdentificador\" a sus tweets. No incluya el símbolo @."
 
 #: bctt_options.php:98
 msgid ""
-"Checking the box below will force the plugin to show the WordPress shortlink in "
-"place of the full URL. While this does not impact tweet character length, it is "
-"useful alongside plugins which customize the WordPress shortlink using services like "
-"bit.ly or yourls.org for tracking"
+"Checking the box below will force the plugin to show the WordPress shortlink "
+"in place of the full URL. While this does not impact tweet character length, "
+"it is useful alongside plugins which customize the WordPress shortlink using "
+"services like bit.ly or yourls.org for tracking"
 msgstr ""
-"Marca la casilla siguiente para mostrar la shortlink WordPress en lugar de la "
-"dirección URL completa. Mientras que esto no afecte la longitud de tweet, es útil "
-"junto con plugins que personalizar el shortlink WordPress usando servicios como bit."
-"ly o yourls.org para el seguimiento"
+"Marca la casilla siguiente para mostrar la shortlink WordPress en lugar de "
+"la dirección URL completa. Mientras que esto no afecte la longitud de tweet, "
+"es útil junto con plugins que personalizar el shortlink WordPress usando "
+"servicios como bit.ly o yourls.org para el seguimiento"
 
 #: bctt_options.php:104
 msgctxt "label for text input on settings screen"
@@ -157,15 +201,16 @@ msgid "Save Changes"
 msgstr "Guardar cambios"
 
 #: bctt_options.php:114
+#, php-format
 msgid "An open source plugin by <a href=%s>Ben Meredith</a>"
 msgstr "Un plugin de código abierto por <a href=%s>Ben Meredith</a>"
 
-#: better-click-to-tweet.php:138
+#: better-click-to-tweet.php:142
 msgctxt "Text for the box on the reader-facing box"
 msgid "Click To Tweet"
 msgstr "﻿Click Para Twittear"
 
-#: better-click-to-tweet.php:209
+#: better-click-to-tweet.php:231
 msgctxt "text for the link on the plugins page"
 msgid "Settings"
 msgstr "Ajustes"
@@ -174,26 +219,16 @@ msgstr "Ajustes"
 msgid "Better Click To Tweet"
 msgstr "Better Click To Tweet"
 
-#. Plugin URI of the plugin/theme
-msgid "https://wordpress.org/plugins/better-click-to-tweet/"
-msgstr "https://wordpress.org/plugins/better-click-to-tweet/"
-
 #. Description of the plugin/theme
 msgid ""
-"The only Click To Tweet plugin to add translation support. The only Click To Tweet "
-"plugin to take into account your Twitter username's length in truncating long "
-"tweets, or to correctly take into account non-Roman characters. Simply put, as Click "
-"To Tweet plugins go, this one is, well, BETTER."
+"The only Click To Tweet plugin to add translation support. The only Click To "
+"Tweet plugin to take into account your Twitter username's length in "
+"truncating long tweets, or to correctly take into account non-Roman "
+"characters. Simply put, as Click To Tweet plugins go, this one is, well, "
+"BETTER."
 msgstr ""
-"El único clic a Tweet plugin para agregar compatibilidad con traducción. El plugin "
-"Click a Tweet sólo tome en cuenta la longitud de su nombre de usuario Twitter en "
-"truncar largos tweets, o tomar en caracteres no romanos cuenta correctamente. En "
-"pocas palabras, como haga clic para Tweet plugins, ésta es, bueno, mejor."
-
-#. Author of the plugin/theme
-msgid "Ben Meredith"
-msgstr "Ben Meredith"
-
-#. Author URI of the plugin/theme
-msgid "http://benandjacq.com"
-msgstr "http://benandjacq.com"
+"El único clic a Tweet plugin para agregar compatibilidad con traducción. El "
+"plugin Click a Tweet sólo tome en cuenta la longitud de su nombre de usuario "
+"Twitter en truncar largos tweets, o tomar en caracteres no romanos cuenta "
+"correctamente. En pocas palabras, como haga clic para Tweet plugins, ésta es,"
+" bueno, mejor."
