--- a/languages/better-click-to-tweet-es_ES.po
+++ b/languages/better-click-to-tweet-es_ES.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/better-click-to-"
 "tweet\n"
 "POT-Creation-Date: 2015-07-13 14:15-0400\n"
-"PO-Revision-Date: Tue Jul 14 2015 11:40:50 GMT-0400 (EDT)\n"
+"PO-Revision-Date: Tue Jul 14 2015 11:46:56 GMT-0400 (EDT)\n"
 "Last-Translator: admin <ben@benandjacq.com>\n"
 "Language-Team: \n"
 "Language: Spanish (Spain)\n"
@@ -43,12 +43,12 @@ msgstr "Algo significativo para Twittear"
 #: assets/tinymce/languages/bctt-mce-locale.php:15
 msgctxt "Text explaining the checkbox on the visual editor"
 msgid "Add via @YourTwitterName to this tweet"
-msgstr "Agrega \"via @NombreIdentificador\" en este tweet."
+msgstr "Agrega via @NombreIdentificador en este tweet."
 
 #: assets/tinymce/languages/bctt-mce-locale.php:16
 msgctxt "Checkbox label in visual editor"
 msgid "Include via?"
-msgstr "¿Incluye \"via @NombreIdentificador\"?"
+msgstr "¿Incluye via @NombreIdentificador?"
 
 #: bctt_options.php:40
 msgid "You do not have sufficient permissions to access this page."
